<resources>
    <string name="app_name">TechBazaar</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="regist">Regisztráció</string>
    <string name="logo">tb_logo</string>
    <string name="email">E-mail cím</string>
    <string name="password_again">Jelszó újra</string>
    <string name="back">Mégse</string>
    <string name="fail_sign_in">Sikertelen belépés!</string>
    <string name="Missing_field">Töltsd ki az összes mezőt!</string>
    <string name="search">Keresés</string>
    <string name="cart">Bevásárlókosár</string>
    <string name="settings">Beállítások</string>
    <string name="exit">Kijelentkezés</string>
    <string name="notification">Értesítések</string>
    <string name="favorite">Kedvencek</string>
    <string name="remember_password">Jelszó megjegyzése</string>
    <string name="login_with_guest">Lépj be vendégként</string>
    <string name="highlighted_home">Kiemelt ajánlataink</string>
    <string name="back_to_home">Vissza a főoldalra</string>
    <string name="upload_later">Termékek feltöltése később!</string>
    <string name="higlighted">Kiemelt ajánlataink</string>
    <string name="accept_afsz">Elfogadom az Általános Szerződési Feltételeket</string>
    <string name="accept_any">Elfogadom az Adatvédelmi nyilatkozatot</string>
    <string name="index">Kezdőlap</string>
    <string name="forgot_password">Elfelejtetted a jelszavad?</string>
    <string name="email_req">Add meg az Email címed</string>
    <string name="email_input_hint">valami@valami.hu</string>
    <string name="Send_fp_email">Visszaállítás</string>
    <string name="cancel_fp_email">Mégse</string>
    <string name="empty_cart">A kosár üres!</string>
    <string name="order_items">Termékek megrendelése</string>
    <string name="no_fav">Nincs hozzáadva kedvenc termék!</string>
    <string name="save_udata">Adatok frissítése</string>
    <string name="delete_user">Fiók törlése</string>
    <string-array name="category_items_name">
        <item>Alaplap</item>
        <item>Processzor</item>
        <item>Memória</item>
        <item>Videokártya</item>
        <item>Monitor</item>
        <item>SSD/HDD</item>
        <item>Tápegység</item>
        <item>Számítógépház</item>
        <item>Hűtés</item>
        <item>Nyomtató/szkenner</item>
        <item>Billentyűzet/egér</item>
        <item>Hangszóró</item>
        <item>Kábel</item>
    </string-array>
    <string-array name="highlited_items_names">
        <item>Core i5–10400F</item>
        <item>Core i7–12700K</item>
        <item>Asus ROG STRIX B550-F GAMING</item>
        <item>ASRock B450 Pro4</item>
        <item>SSD 2.5" Samsung 870 Evo 500GB</item>
        <item>Kingston SSDNow KC400 1 TB</item>
        <item>CORSAIR iCUE 5000T RGB TG fekete</item>
        <item>Cooler Master MasterCase H500M</item>
    </string-array>
    <string-array name="highlited_items_description">
        <item>Órajele: 2,9 GHz \nFoglalat: Intel 1200\nMagok száma: 6\nMax. teljesítmény: 4,3 GHz…</item>
        <item>Órajele: 2,7 GHz \nFoglalat: Intel 1700 \nMagok száma: 12\nMax. teljesítmény: 5 GHz…</item>
        <item>CPU Foglalat: AM4 \nChipset: AMD B550 \nMemória típusa: DDR4 \nMax. memória mérete: 128 GB…</item>
        <item>\nCPU Foglalat: AM4 \nChipset: AMD B450 \nMemória típusa: DDR4 \nMax. memória mérete: 64 GB…</item>
        <item>Kialakítás: 2,5 inch \nKapacitás: 500 GB \nMaximális olvasási sebesség: 560 MB/s \nMaximális írási sebesség: 530 MB/s…</item>
        <item>Kialakítás: 2,5 inch \nKapacitás: 1000 GB \nMaximális olvasási sebesség: 550 MB/s \nMaximális írási sebesség: 530 MB/s…</item>
        <item>Típus: MidiTower \nSzélesség: 251 mm \nMagasság: 559 mm \nMélység: 528 mm Tömeg 17080 g…</item>
        <item>Típus: MidiTower \nSzélesség: 248 mm \nMagasság: 546 mm \nMélység: 544 mm Tömeg 14200 g…</item>
    </string-array>
    <string-array name="items_in_category_name">
        <item>alaplap_Asus ROG STRIX B550-F GAMING</item>
        <item>alaplap_ASRock B450 Pro4</item>
        <item>alaplap_Gigabyte AORUS Z390</item>
        <item>alaplap_Asrock X570 Steel Legend</item>
        <item>alaplap_MSI MAG B550 TOMAHAWK WIFI</item>
        <item>alaplap_Asus TUF B450M-PLUS</item>
        <item>alaplap_ASRock B450M PRO4</item>
        <item>alaplap_ZOTAC ASRock H310CM-DVS</item>
        <item>alaplap_EVGA Z390 FTW</item>
        <item>alaplap_ASRock A320M-HDV</item>

        <item>processzor_Core i5–10400F</item>
        <item>processzor_Core i7–12700K</item>
        <item>processzor_Intel Core i5–11600K</item>
        <item>processzor_AMD Ryzen 7 5800X</item>
        <item>processzor_Intel Core i7–10700K</item>
        <item>processzor_AMD Ryzen 5 3600</item>
        <item>processzor_AMD Ryzen 3 3300X</item>
        <item>processzor_Intel Core i9–11900K</item>
        <item>processzor_AMD Ryzen 7 3700X</item>

        <item>memória_Corsair Vengeance LPX 16GB</item>
        <item>memória_G.SKILL Ripjaws V 32GB</item>
        <item>memória_Crucial Ballistix 8GB</item>
        <item>memória_Kingston HyperX Fury 16GB</item>
        <item>memória_G.SKILL Trident Z RGB 16GB</item>
        <item>memória_Corsair Vengeance RGB 32GB</item>
        <item>memória_Kingston HyperX Predator 16GB</item>
        <item>memória_Corsair Vengeance LPX 8GB</item>
        <item>memória_G.SKILL Trident Z 8GB</item>
        <item>memória_Crucial Ballistix Sport LT 16GB</item>

        <item>videokártya_NVIDIA GeForce RTX 3080</item>
        <item>videokártya_AMD Radeon RX 6800 XT</item>
        <item>videokártya_NVIDIA GeForce GTX 1660 Ti</item>
        <item>videokártya_AMD Radeon RX 5700</item>
        <item>videokártya_NVIDIA GeForce RTX 3090</item>
        <item>videokártya_AMD Radeon RX 6900 XT</item>
        <item>videokártya_NVIDIA GeForce GTX 1050 Ti</item>
        <item>videokártya_AMD Radeon RX 580</item>
        <item>videokártya_NVIDIA GeForce GTX 1080 Ti</item>
        <item>videokártya_AMD Radeon RX Vega 56</item>

        <item>monitor_Dell UltraSharp U2720Q</item>
        <item>monitor_Samsung Odyssey G7</item>
        <item>monitor_LG 27GL850-B</item>
        <item>monitor_ASUS ROG Swift PG259QN</item>
        <item>monitor_Acer Predator X34</item>
        <item>monitor_Samsung 27" Curved 4K</item>
        <item>monitor_LG 32UN880-B</item>
        <item>monitor_ASUS TUF VG27AQ</item>
        <item>monitor_Dell P2419H</item>
        <item>monitor_Acer Nitro XV272U</item>

        <item>ssd/hdd_SSD 2.5" Samsung 870 Evo 500GB</item>
        <item>ssd/hdd_Kingston SSDNow KC400 1 TB</item>
        <item>ssd/hdd_Seagate Barracuda 2TB</item>
        <item>ssd/hdd_Crucial P5 1TB</item>
        <item>ssd/hdd_Kingston A2000 500GB</item>
        <item>ssd/hdd_Samsung 980 PRO 500GB</item>
        <item>ssd/hdd_WD Blue 1TB</item>
        <item>ssd/hdd_PNY XLR8 CS3030 1TB</item>
        <item>ssd/hdd_SanDisk Ultra 3D 1TB</item>
        <item>ssd/hdd_Toshiba P300 2TB</item>

        <item>tápegység_Corsair RM750x</item>
        <item>tápegység_SEA Sonic FOCUS Plus 750W</item>
        <item>tápegység_EVGA SuperNOVA 650 G5</item>
        <item>tápegység_FSP Hydro G 850W</item>
        <item>tápegység_Cooler Master MWE Gold 650W</item>
        <item>tápegység_Seasonic S12III 500W</item>
        <item>tápegység_Rosewill Capstone 750W</item>
        <item>tápegység_Antec Earthwatts Gold 650W</item>
        <item>tápegység_Corsair HX1000i</item>
        <item>tápegység_Leviathan 700W</item>

        <item>számítógépház_CORSAIR iCUE 5000T RGB TG fekete</item>
        <item>számítógépház_Cooler Master MasterCase H500M</item>
        <item>számítógépház_Corsair iCUE 220T</item>
        <item>számítógépház_Phanteks P400A</item>
        <item>számítógépház_Cooler Master MasterBox Q300L</item>
        <item>számítógépház_Antec DF500</item>
        <item>számítógépház_Aerocool Cylon</item>
        <item>számítógépház_Corsair Carbide 275R</item>
        <item>számítógépház_Lian Li PC-011 Dynamic</item>
        <item>számítógépház_Thermaltake Core V71</item>

        <item>hűtés_Noctua NH-D15</item>
        <item>hűtés_Corsair iCUE H150i Elite Capellix</item>
        <item>hűtés_Liquid Freezer II 360</item>
        <item>hűtés_MSI MAG CoreLiquid 240R</item>
        <item>hűtés_Air Cooler Hyper 212 EVO</item>
        <item>hűtés_Cooler Master Hyper 212</item>
        <item>hűtés_Corsair H100i PRO</item>
        <item>hűtés_Noctua NH-U12A</item>
        <item>hűtés_Arctic Liquid Freezer II 280</item>
        <item>hűtés_Zalman CNPS10X Performa</item>

        <item>nyomtató/szkenner_Epson EcoTank L3150</item>
        <item>nyomtató/szkenner_Canon PIXMA TS3450</item>
        <item>nyomtató/szkenner_HP ScanJet Pro 2500</item>
        <item>nyomtató/szkenner_HP DeskJet 2720</item>
        <item>nyomtató/szkenner_Canon CanoScan LiDE 400</item>
        <item>nyomtató/szkenner_Brother HL-L2350DW</item>
        <item>nyomtató/szkenner_Epson EcoTank ET-2720</item>
        <item>nyomtató/szkenner_Canon PIXMA G3400</item>
        <item>nyomtató/szkenner_Epson Perfection V39</item>
        <item>nyomtató/szkenner_Brother MFC-J995DW</item>

        <item>billentyűzet/egér_Razer Huntsman Elite</item>
        <item>billentyűzet/egér_Logitech MX Master 3</item>
        <item>billentyűzet/egér_Corsair K95 RGB Platinum</item>
        <item>billentyűzet/egér_Razer DeathAdder Elite</item>
        <item>billentyűzet/egér_steelseries Apex Pro</item>
        <item>billentyűzet/egér_Logitech G502 Hero</item>
        <item>billentyűzet/egér_HyperX Alloy FPS Pro</item>
        <item>billentyűzet/egér_SteelSeries Rival 600</item>
        <item>billentyűzet/egér_ANTEC K3</item>
        <item>billentyűzet/egér_SteelSeries Sensei Ten</item>

        <item>hangszóró_Bose SoundLink Revolve+</item>
        <item>hangszóró_Logitech Z313</item>
        <item>hangszóró_JBL Flip 5</item>
        <item>hangszóró_Boat Stone 1000</item>
        <item>hangszóró_Anker Soundcore 2</item>
        <item>hangszóró_Sony SRS-XB33</item>
        <item>hangszóró_Phillips BT6900</item>
        <item>hangszóró_Klipsch R-51M</item>
        <item>hangszóró_Marshall Stanmore II</item>
        <item>hangszóró_KEF LS50 Wireless</item>

        <item>kábel_AmazonBasics HDMI 2.0</item>
        <item>kábel_UGREEN USB-C</item>
        <item>kábel_ANKER PowerLine Lightning</item>
        <item>kábel_StarTech VGA</item>
        <item>kábel_AmazonBasics DisplayPort</item>
        <item>kábel_Anker PowerLine+ USB-C</item>
        <item>kábel_Corsair Type-C</item>
        <item>kábel_Belkin 3.5mm Aux</item>
        <item>kábel_AmazonBasics Ethernet</item>
        <item>kábel_Logitech Micro USB</item>
    </string-array>
</resources>