<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:background="#FFFFFF">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".Start_activity">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/login_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:srcCompat="@drawable/main_logo"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="14"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="14"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/primaryc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            app:layout_constraintVertical_bias="0.100"
            tools:layout_editor_absoluteX="0dp" />
        <LinearLayout
            android:id="@+id/checkl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            >
            <CheckBox
                android:id="@+id/remember_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                android:textColor="@color/primaryc"
                android:drawable="@drawable/registration_check_active"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/primaryc"
                android:layout_marginEnd="10dp"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:focusable="true" />
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="#2C5078"
            android:onClick="signInWithEmail"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkl"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/regist"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="#2C5078"
            android:onClick="register"
            android:text="@string/regist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInWithGuest"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signInWithGuest"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:onClick="signInWithGuest"
            android:text="@string/login_with_guest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
